--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "jest": "^29.5.0",
-    "prettier": "^2.8.4",
-    "ts-jest": "^29.0.5"
+    "jest": "^27.5.1",
+    "prettier": "^2.8.4"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest --config ./jest.config.js --runInBand"
   },
   "devDependencies": {
     "@jest/globals": "^29.5.0",
+    "@swc/core": "^1.3.41",
+    "@swc/jest": "^0.2.24",
     "typescript": "^4.9.5"
   }
 }
